tests/paczka1/fuzzy1/66424724.err
Error in line 3: S351 S351 41,4
Error in line 2: 1Ls A794 95,4
Error in line 11: 1Ls S351 58,6
Error in line 12: 9CQ S371 29,3
Error in line 26: qbkb4LK S421 95,6
Error in line 30: S351 S351 86,2
